# vaxintel

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
docs/: business_context.md  dashboard_design.md  data_dictionary.md  data_sources.md  linkedin_post.md  methodology.md
docs/images/: README.md
notebooks/: 01_exploratory_analysis.ipynb
scripts/: build_dataset.py  download_data.py  export_dashboard_assets.py  run_app.py
src/vaxintel/: __init__.py  config.py  logging_utils.py
src/vaxintel/data_ingestion/: cepea.py  geodata.py  ibge.py  mapa.py
src/vaxintel/data_processing/: clean.py  harmonize.py  validate.py
src/vaxintel/features/: economic.py  exposure.py  opportunity.py  sanitary_pressure.py
src/vaxintel/scoring/: index.py  normalize.py  weights.py
src/vaxintel/utils/: metadata.py  paths.py
src/vaxintel/visualization/: charts.py  maps.py  tables.py
tests/: test_features.py  test_processing.py  test_scoring.py
