[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaxintel-brasil"
version = "0.1.0"
description = "Plataforma analitica para priorizacao territorial de oportunidades estrategicas de vacinacao animal no Brasil."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mateus" }]
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "requests>=2.32.0",
  "pydantic>=2.7.0",
  "streamlit>=1.43.0",
  "plotly>=5.24.0",
  "geopandas>=1.0.0",
  "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

